# Django-rolls

./: .pre-commit-config.yaml  db.sqlite3  main.py  manage.py  pyproject.toml
dice/: admin.py  apps.py  models.py  urls.py  views.py
dice/migrations/: 0001_initial.py  0002_weapon_delete_post.py  0003_alter_weapon_options_remove_weapon_cost_and_more.py  0004_alter_armor_armor_class.py
dice/templates/dice/: catalog.html  post_detail.html  post_list.html
project/: settings.py  urls.py
